--- a/Restaurent/en.lproj/MainStoryboard.storyboard
+++ b/Restaurent/en.lproj/MainStoryboard.storyboard
@@ -1,21 +1,130 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="1z7-Qd-KLQ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <deployment defaultVersion="1552" identifier="iOS"/>
+        <development version="4600" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
-        <scene sceneID="5">
+        <!--Restaurent Locaton List - Pick Location-->
+        <scene sceneID="HHU-wt-uKv">
             <objects>
-                <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <tableViewController id="OP8-TO-ERA" customClass="RestaurentLocatonList" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="TTs-XG-lC3">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3oO-zc-abh">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="OP8-TO-ERA" id="NvC-Tp-Ug3"/>
+                            <outlet property="delegate" destination="OP8-TO-ERA" id="b2F-KR-Lrj"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Pick Location" id="aUH-k4-8Rr"/>
+                    <connections>
+                        <segue destination="ObZ-81-VFf" kind="push" identifier="toLocationList" id="kBj-nP-aOd"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="34h-mD-Xgy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1151" y="-285"/>
+        </scene>
+        <!--Location List - Pick Restaurent-->
+        <scene sceneID="X5K-HI-0Mz">
+            <objects>
+                <tableViewController id="ObZ-81-VFf" customClass="LocationList" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="SiU-QH-D5a">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="Zpv-2F-bKJ">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="ObZ-81-VFf" id="gCP-6F-Ts1"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="lTK-tP-8zY">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ObZ-81-VFf" id="WEI-gL-Kw0"/>
+                            <outlet property="delegate" destination="ObZ-81-VFf" id="IEt-g2-xCH"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Pick Restaurent" id="7YI-Ed-vTc"/>
+                    <connections>
+                        <outlet property="searchBar" destination="Zpv-2F-bKJ" id="sdu-8f-nzH"/>
+                        <outlet property="searchDisplayController" destination="jYL-s5-Bvj" id="9ha-cw-gnx"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gqC-dH-sb1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="jYL-s5-Bvj">
+                    <connections>
+                        <outlet property="delegate" destination="ObZ-81-VFf" id="Ki4-uC-uYB"/>
+                        <outlet property="searchBar" destination="Zpv-2F-bKJ" id="DZM-xW-BY1"/>
+                        <outlet property="searchContentsController" destination="ObZ-81-VFf" id="4Va-BF-0Or"/>
+                        <outlet property="searchResultsDataSource" destination="ObZ-81-VFf" id="tRp-uz-216"/>
+                        <outlet property="searchResultsDelegate" destination="ObZ-81-VFf" id="OJc-RB-TMv"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1247" y="381"/>
+        </scene>
+        <!--Splash Screen - Pick Food-->
+        <scene sceneID="2GW-Hr-C11">
+            <objects>
+                <viewController id="P1o-UH-yFt" customClass="SplashScreen" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fi3-UO-Ph6">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Pick Food" id="QKe-pv-Pxa"/>
+                    <connections>
+                        <segue destination="OP8-TO-ERA" kind="push" identifier="toFoodList" id="b5E-AE-HI4"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wa9-yZ-ESh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="670" y="-295"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EtM-v1-NOy">
+            <objects>
+                <navigationController id="1z7-Qd-KLQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nA5-b7-Kz2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="P1o-UH-yFt" kind="relationship" relationship="rootViewController" id="xQy-Gh-XuR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wuP-Hk-7ih" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="636" y="387"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
